# openitgo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO-ebook.md  TODO.md
.github/workflows/: ci.yml
.zed/: tasks.json
assets/icon/: AppIcon.icns  Info.plist.template  generate_icons.py
docs/: audit-report.md  bug.md  ui-gallery-immersive-p3-p4.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-17-archive-index-cache.md  2026-06-17-async-preload-rar-pdf.md  2026-06-17-comic-reader-implementation-plan.md  2026-06-17-gpu-texture-compression.md  2026-06-17-library-search-sort.md  2026-06-17-multi-threaded-decode-pool.md  2026-06-22-macos-dock-drop-open-plan.md  2026-06-22-thumbnail-first-rendering.md  2026-06-23-icons-toolbar-plan.md  2026-06-24-ebook-reader.md  2026-06-24-ebook-spread-pagination.md  2026-06-26-ebook-page-bottom-mask.md  2026-06-26-migrate-ebook-to-css-columns.md  2026-07-14-media-playback.md  2026-07-15-media-player-ux.md  2026-07-15-mpv-under-egui-overlay.md  2026-07-17-ebook-polish.md  2026-07-17-todo-45-55-batch.md  2026-07-18-todo-backlog-batch.md  2026-07-22-hidden-bug-fix-batch.md
docs/superpowers/reports/: 2026-06-26-css-columns-test-plan.md  2026-07-17-bug-notes-archived.md  2026-07-17-css-columns-acceptance-checklist.md  2026-07-17-large-chapter-loading-eval.md
docs/superpowers/specs/: 2026-06-17-archive-index-cache-design.md  2026-06-17-comic-reader-design.md  2026-06-17-gpu-texture-compression-design.md  2026-06-17-library-search-sort-design.md  2026-06-17-multi-threaded-decode-pool-design.md  2026-06-22-macos-dock-drop-open-design.md  2026-06-22-thumbnail-first-rendering-design.md  2026-06-23-icons-toolbar-design.md  2026-06-24-ebook-spread-pagination-design.md  2026-07-14-media-playback-design.md  2026-07-15-media-player-ux-design.md  2026-07-17-ebook-polish-design.md  2026-07-17-todo-45-55-batch-design.md
openitgo-app/: Cargo.toml
openitgo-app/examples/: flip_through.rs  probe_ebook_menu.rs  probe_mpv_view.rs  probe_overlay.rs  probe_video_overlay.rs  probe_visible.rs  profile_open.rs  profile_view.rs  rapid_flip.rs  ui_smoke.rs
openitgo-app/src/: app.rs  cache.rs  ebook_renderer.rs  ebook_renderer_template.rs  fonts.rs  lib.rs  loader.rs  main.rs  opener.rs  platform.rs  shortcuts.rs  timing.rs  window_geometry.rs
openitgo-app/src/platform/macos/: mpv_view.rs
openitgo-app/src/theme/: mod.rs
openitgo-app/src/views/: ebook.rs  library.rs  media.rs  mod.rs  reader.rs  settings.rs
openitgo-app/src/widgets/: mod.rs  progress_bar.rs  thumbnail_progress_bar.rs  volume_wedge.rs
openitgo-app/tests/: loader_integration.rs
openitgo-core/: Cargo.toml
openitgo-core/src/: layout.rs  models.rs  state.rs
openitgo-media/: Cargo.toml
openitgo-media/examples/: probe.rs  probe_render.rs
openitgo-media/src/: apply.rs  args.rs  chapters.rs  cover.rs  error.rs  lib.rs  player.rs  player_stub.rs  render.rs  state.rs  tracks.rs
openitgo-parser/: Cargo.toml
openitgo-parser/examples/: probe_rar_password.rs
openitgo-parser/src/: chapters.rs  epub.rs  folder.rs  html.rs  lib.rs  markdown.rs  mobi.rs  pdf.rs  rar.rs  text_encoding.rs  traits.rs  txt.rs  zip.rs
openitgo-parser/tests/: ebook_integration.rs  integration.rs
openitgo-parser/tests/fixtures/: encrypted-files-pw123.rar  encrypted-header-pw123.rar
openitgo-storage/: Cargo.toml
openitgo-storage/src/: json_store.rs  models.rs
openitgo-storage/tests/: integration.rs
rust-reader-app/: Cargo.toml
rust-reader-app/examples/: diagnose_hang.rs  flip_through.rs  probe_mpv_view.rs  probe_overlay.rs  probe_video_overlay.rs  probe_visible.rs  profile_open.rs  profile_view.rs  rapid_flip.rs  ui_smoke.rs
rust-reader-app/src/: app.rs  cache.rs  ebook_renderer.rs  ebook_renderer_template.rs  fonts.rs  lib.rs  loader.rs  main.rs  opener.rs  platform.rs  shortcuts.rs  timing.rs
rust-reader-app/src/platform/macos/: mpv_view.rs
rust-reader-app/src/views/: ebook.rs  library.rs  media.rs  mod.rs  reader.rs  settings.rs
rust-reader-app/src/widgets/: mod.rs  page_navigator.rs  page_view.rs  progress_bar.rs  thumbnail_bar.rs  thumbnail_progress_bar.rs
rust-reader-app/tests/: loader.rs  loader_integration.rs
rust-reader-core/: Cargo.toml
rust-reader-core/src/: ebook.rs  layout.rs  lib.rs  models.rs  state.rs
rust-reader-media/: Cargo.toml  build.rs
rust-reader-media/examples/: probe.rs  probe_render.rs
rust-reader-media/src/: cover.rs  devices.rs  lib.rs  player.rs  player_stub.rs  render.rs  state.rs  time.rs
rust-reader-parser/: Cargo.toml
rust-reader-parser/src/: chapters.rs  epub.rs  folder.rs  html.rs  lib.rs  markdown.rs  mobi.rs  pdf.rs  rar.rs  traits.rs  txt.rs  zip.rs
rust-reader-parser/tests/: ebook_integration.rs  integration.rs  sample.cbr
rust-reader-parser/tests/fixtures/: minimal.epub
rust-reader-storage/: Cargo.toml
rust-reader-storage/src/: json_store.rs  lib.rs  models.rs
rust-reader-storage/tests/: integration.rs
scripts/: make-big-chapter-epub.py  package-macos.sh
