[workspace]
members = ["rust-reader-core", "rust-reader-parser", "rust-reader-storage", "rust-reader-app"]
resolver = "2"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "avif"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
