[workspace]
members = ["openitgo-core", "openitgo-parser", "openitgo-storage", "openitgo-app", "openitgo-media"]
resolver = "2"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "avif", "bmp", "tiff"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
