[package]
name = "rust-reader-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Comic archive parsers for rustReader"

[dependencies]
rust-reader-core = { path = "../rust-reader-core" }
image = { workspace = true }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
unrar = "0.5"
pdf = "0.9"
epub = "2.1"
mobi = "0.8"
pulldown-cmark = "0.13"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
